# backend/dist/build/swagger.json
@@ -115,17 +115,24 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "items": {
-                                        "$ref": "#/components/schemas/User"
-                                    },
-                                    "type": "array"
+                                    "$ref": "#/components/schemas/UserConfig"
                                 }
                             }
                         }
                     }
                 },
                 "security": [],
-                "parameters": []
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "userId",
+                        "required": true,
+                        "schema": {
+                            "format": "double",
+                            "type": "number"
+                        }
+                    }
+                ]
             }
         }
     },
